--- a/#101 Symmetric Tree.ipynb
+++ b/#101 Symmetric Tree.ipynb
@@ -59,7 +59,10 @@
     "            cur = stack.pop()\n",
     "            l, r = cur[0], cur[1]\n",
     "            if not l and not r: continue\n",
+    "\n",
+    "            # if either one node doesn't exist or (both exist but values are not equal): return False\n",
     "            if not l and r or not r and l or l.val != r.val: return False\n",
+    "            # keep appending the next node until the while loop is broken\n",
     "            stack.append((l.right, r.left))\n",
     "            stack.append((l.left, r.right))\n",
     "        return True"
