--- a/#542 01Matrix.ipynb
+++ b/#542 01Matrix.ipynb
@@ -36,6 +36,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Use BFS to solve this question!\n",
+    "1) add source node to the queue\n",
+    "2) pop each time, add distance, and add its neighbors to the queue\n",
+    "3) continue until the queue is empty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Given an m x n binary matrix mat, return the distance of the nearest 0 for each cell.\n",
     "\n",
     "The distance between two adjacent cells is 1."
