medium questions. review again

--- a/#206 Reverse Linked List.ipynb
+++ b/#206 Reverse Linked List.ipynb
@@ -39,6 +39,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7cdebb43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        prev = None\n",
+    "        \n",
+    "        while head:\n",
+    "            cur = head.next\n",
+    "            head.next = prev\n",
+    "            prev = head\n",
+    "            head = cur\n",
+    "            \n",
+    "        return prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2387cd99",
    "metadata": {},
    "outputs": [],
