--- a/#3 Longest Substring Without Repeating.ipynb
+++ b/#3 Longest Substring Without Repeating.ipynb
@@ -27,6 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "4/4 practiced third time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Given a string s, find the length of the longest substring without repeating characters."
    ]
   }
